src-tauri/build_log.txt
    Checking ciel v0.1.0 (D:\projects\ciel\src-tauri)
error[E0599]: no method named `delete_torrent` found for struct `Arc<librqbit::Session>` in the current scope
   --> src\torrent.rs:186:22
    |
186 |         self.session.delete_torrent(info_hash, false);
    |                      ^^^^^^^^^^^^^^ method not found in `Arc<librqbit::Session>`

warning: unused variable: `indices`
   --> src\torrent.rs:191:51
    |
191 |     pub async fn start_selective(&self, id: &str, indices: Vec<usize>) -> Result<(), String> {
    |                                                   ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_indices`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `ciel` (lib) generated 1 warning
error: could not compile `ciel` (lib) due to 1 previous error; 1 warning emitted
